src/objects/Primary_Outcome__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Primary Outcomes</relationshipLabel>
        <relationshipName>Primary_Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPrimary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outcome_Summary__c</fullName>
        <label>Outcome Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Primary Outcome</label>
    <nameField>
        <label>Primary Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Primary Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>